# DistributedMonitor

./: .gitignore  CMakeLists.txt  README.md  peers.config  run_helper.sh
include/: DistributedConditionalVariable.h  Logger.h  Messenger.h  SafeSocket.h  main.h
include/Core/: DistributedConditionalVariable.h  DistributedMonitor.h  DistributedMutex.h  Messenger.h  SafeSocket.h
include/Demo/: IntVectorSerializer.h  MonitorDemo.h
include/Messages/: AcknowledgeMessage.h  Envelope.h  Message.h  MessageType.h  PoisonMessage.h  PrivilegeMessage.h  RequestMessage.h  SignalMessage.h  StateMessage.h  StringMessage.h  WaitEndMessage.h  WaitMessage.h
include/Serializers/: AcknowledgeMessageSerializer.h  EnvelopeSerializer.h  MessageSerializer.h  MessageSerializerFactory.h  PoisonMessageSerializer.h  PrivilegeMessageSerializer.h  RequestMessageSerializer.h  Serializer.h  SignalMessageSerializer.h  StateMessageSerializer.h  StringMessageSerializer.h  WaitEndMessageSerializer.h  WaitMessageSerializer.h
include/Utils/: CallbackRepository.h  CallbackWrapper.h  Logger.h  Singleton.h
src/: DistributedMutex.cpp  Logger.cpp  Messenger.cpp  SafeSocket.cpp  main.cpp
src/Core/: DistributedConditionalVariable.cpp  DistributedMutex.cpp  Messenger.cpp  SafeSocket.cpp
src/Demo/: IntVectorSerializer.cpp  MonitorDemo.cpp
src/Messages/: AcknowledgeMessage.cpp  Envelope.cpp  Message.cpp  MessageType.cpp  PoisonMessage.cpp  PrivilegeMessage.cpp  RequestMessage.cpp  SignalMessage.cpp  StateMessage.cpp  StringMessage.cpp  WaitEndMessage.cpp  WaitMessage.cpp
src/Utils/: Logger.cpp
(+12 files in other folders)
